AWS/hp-infra-aws/03_core_apps/hp-app/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hp-backend-worker
  namespace: hp-core
  labels:
    app: hp-backend-worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hp-backend-worker
  template:
    metadata:
      labels:
        app: hp-backend-worker
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "8080"
    spec:
      nodeSelector:
        nodepool: data
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - hp-backend-worker # 👈 [수정 완료]
              topologyKey: "kubernetes.io/hostname"
      tolerations:
        - key: "dedicated"
          operator: "Equal"
          value: "data"
          effect: "NoSchedule"
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      volumes:
        - name: kafka-user
          secret:
            secretName: ticketing-notification-client
        - name: kafka-cluster-ca
          secret:
            secretName: ticketing-cluster-ca-cert
        - name: kafka-certs-converted
          emptyDir: {}

      containers:
      - name: hp-backend-worker
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
        volumeMounts:
          - name: kafka-user
            mountPath: /opt/kafka/certs
            readOnly: true
          - name: kafka-certs-converted
            mountPath: /opt/kafka/certs-converted
            readOnly: true
        image: 681224237958.dkr.ecr.ap-northeast-2.amazonaws.com/hp-backend:v0.1.80
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "1Gi"
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          initialDelaySeconds: 100
          periodSeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 100
          periodSeconds: 10
          timeoutSeconds: 5
          
---
apiVersion: v1
kind: Service
metadata:
  name: hp-backend-worker
  namespace: hp-core
  labels:
    app: hp-backend-worker
spec:
  type: ClusterIP
  selector:
    app: hp-backend-worker
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
